# imageclassify

./: .pdm-python  README.md  pyproject.toml
src/imageclassify/: __init__.py  model.py
